<resources>
    <string name="app_name">Billiárda</string>
    <string name="quitStr">Quit</string>
    <string name="backStr">Back</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="eightballwallpaper">eightBallwallpaper</string>
    <string name="contact">contact</string>
    <string name="email">Email</string>
    <string name="billiarda">Billiárda</string>
    <string name="welcome">Welcome!</string>
    <string name="booking_history">Booking History</string>
    <string name="new_booking">New Booking</string>
    <string name="select">Select</string>
    <string name="select_time">Select Time</string>
    <string name="sign_out">Sign out</string>
    <string name="phone_num_36708337275">Phone num: +36708337275</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="edit_booking">Edit Booking</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="save">Save</string>
</resources>